gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.21.4
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - name: gitea-data
          mountPath: /data
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    nodePort: 30000
  - name: ssh
    port: 22
    nodePort: 30001
  selector:
    app: gitea
