ingress-gitea.yaml
# gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
spec:
  tls:
  - hosts:
    - git.vanoserver.ru  
    secretName: gitea-tls
  rules:
  - host: git.vanoserver.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea 
            port:
              number: 3000
